Tried to Complete the Swagger UI
