# 12-Mini_Project/postaway/src/features/comments/comments.router.js
@@ -4,9 +4,9 @@ import CommentsController from "./comments.controller.js";
 const commentsRouter = express.Router();
 const commentsController = new CommentsController();
 
-commentsRouter.get("/:postId", commentsController.get); //* Get Comments of a Post
-commentsRouter.post("/", commentsController.add); //* Create Comment on Post
-commentsRouter.put("/:postId", commentsController.update); //* Update Comment on Post
-commentsRouter.delete("/:commentId", commentsController.delete); //* Delete Comment of Post
+commentsRouter.get("/get/:postId", commentsController.get); //* Get Comments of a Post
+commentsRouter.post("/create", commentsController.add); //* Create Comment on Post
+commentsRouter.put("/update/:postId", commentsController.update); //* Update Comment on Post
+commentsRouter.delete("/delete/:commentId", commentsController.delete); //* Delete Comment of Post
 
 export default commentsRouter;
